--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,37 @@
-* {
+*{
     box-sizing: border-box;
 }
-body {
+body{
     margin: 0;
 }
-.screen {
+.screen{
     display: flex;
     height: 100vh;
 }
-.leftside {
+.leftside{
     flex: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-.leftside img {
+
+align-items: center;}
+.leftside img{
     max-width: 500px;
     height: auto;
 }
-.rightside {
+.rigthside{
     width: 400px;
-    background-color: #DDD;
+    background-color: #b4b3b3;
     padding: 50px;
 }
-.rightside label {
+.rigthside label{
     display: block;
     margin-bottom: 20px;
 }
-.rightside input {
+.rigthside input{
     width: 100%;
-    border: 1px solid #999;
-    border-radius: 5px;
+    border: 1px solid gray;
+    border-radius: 3px;
     padding: 8px;
     font-size: 14px;
     outline: 0;
-}
-
-.error {
-    font-size: 11px;
-    background-color: #FF0000;
-    color: #FFF;
-    padding: 4px;
-    border-radius: 5px;
 }
